c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/add_two_pointers.c
int main(void)
{
    int *x = 0;
    int *y = 0;
    // it's illegal to add two values of pointer type
    return (x + y == 0);
}